# cp-templates

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  CMakeLists.txt  README.md  cht.hpp  cht_test.cpp  classic_segment_tree.hpp  classic_segment_tree_test.cpp  commons.hpp  commons_test.cpp  dsu.hpp  dsu_test.cpp  fenwick.hpp  fenwick_test.cpp  flake.nix  flow.hpp  flow_test.cpp  functional.hpp  functional_test.cpp  graph.hpp  graph_test.cpp  io.hpp  io_test.cpp  lca.hpp  lca_test.cpp  limits.hpp  limits_test.cpp  math.hpp  math_test.cpp  matrix.hpp  matrix_test.cpp  mo.hpp  mo_test.cpp  modint.hpp  modint_test.cpp  segment_tree.hpp  segment_tree_test.cpp  sparse_table.hpp  sparse_table_test.cpp  (+5 more)
.github/workflows/: ccli-release.yaml  ccli.yaml  cmake.yaml
examples/abc254_f/: README.md  main_lazy_segment_tree.cpp  main_segment_tree.cpp  main_sparse_table.cpp
tools/ccli/: .gitignore  README.md  default.nix  go.mod  go.sum  gomod2nix.toml  main.go  shell.nix
tools/ccli/cmd/: add.go  compile.go  init.go  pack.go  root.go  run.go
tools/ccli/output/: output.go  output_test.go  terminal.go  test.go
tools/ccli/repoinit/: add.go  repoinit.go  repoinit_test.go
tools/ccli/repoinit/templates/: .gitignore  CMakeLists.txt.tmpl  checker.cpp  gen.cpp  interactor.cpp  main.cpp  val.cpp
tools/ccli/spinner/: spinner.go
tools/ccli/submission/: compile.go  pack.go  run.go  submission_test.go
